# interview

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Pattern.h  README.md  add-test.cpp  conanfile.py  experience.puml  inputDataExtended  main.cpp  questions.md  usefull commands
cmake/: UseClangTidy.cmake
task1/: CMakeLists.txt  inputData  main2.cpp
task2/: CMakeLists.txt  Pattern.h  add-test.cpp
task2/DeterminePattern/: CMakeLists.txt  DeterminePattern.cpp  DeterminePattern.h
